# TodoAppStarter

./: README.md
backend/: .dockerignore  .env.example  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt
backend/crud/: todo.py
backend/database/: mongodb.py
backend/models/: todo.py
backend/routes/: todo.py
backend/schemas/: todo.py
backend/src/backend/: __init__.py  main.py
backend/src/backend/crud/: __init.py  todo.py
backend/src/backend/database/: __init__.py  mongodb.py
backend/src/backend/models/: __init__.py  todo.py
backend/src/backend/routes/: __init__.py  todo.py
backend/src/backend/schemas/: __init__.py  todo.py
backend/tests/: __init__.py
backend/tests/integration/: conftest.py  test_negative.py  test_positive.py
backend/tests/unit/: conftest.py  test_crud.py
